<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_AlarmList" Id="{87e26370-60b1-457c-8f08-6739b4f19b11}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_AlarmList :
(
	SafetyNotRun,				//セーフティーが動いてない	
	EmergencyStop,				//非常停止ボタンON
	GripSwichNotOn,				//動作中にグリップスイッチOFFでMcStop
	MITSUBISHIAlarm,			//MITSUBISHIシーケンサーアラーム
	
	
	LastAlarm					//リストの最後
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>