<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Alarm" Id="{ddb289e8-cffb-4a34-8603-29bfa135c811}">
    <Declaration><![CDATA[TYPE ST_Alarm :
STRUCT
	bFlag					:BOOL;					//アラーム発生中フラグ
	eMachineStateSet		:E_MachineState;		//どのマシンステートにするか
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>