<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_MitsubishiCom" Id="{c96c0658-07f7-40dc-a919-7656d8fefdd1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	//---三菱Fx5sの実入出力と接続---
	bTwinCATRun						AT %Q* :BOOL;		//三菱のX2に入力
	bTwinCATModbusStart				AT %Q* :BOOL;		//三菱のX3に入力
	bTwinCATAlarm					AT %Q* :BOOL;		//三菱のx4に入力
	bMitsubishiRun					AT %I* :BOOL;		//三菱のY4より出力
	bMitsubishiModbusStart			AT %I* :BOOL;		//三菱のY5より出力	
	bMitsubishiAlarm				AT %I* :BOOL;		//三菱のY6より出力

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>