<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="P_MitsubishiCom" Id="{7551431c-0546-4892-8591-c118fe27ff05}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_MitsubishiCom
VAR
	i								:INT;
	
	bMitsubishiModbusOK				: BOOL;
	
	uliCountSpeed					:ULINT;
	
	fbTonBlink1						:ton;
	fbTonBlink2						:ton;
	tBlinkTine						:TIME:=T#130MS;
	
	fbTonRunCheck1					:ton;
	fbTonRunCheck2					:ton;
	
	fbTonMcPower					:ton;
	fbMcPowerREdge					:R_TRIG;
	fbMcPowerFEdge					:F_TRIG;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//-----三菱へ出力-----
	GVL_MitsubishiCom.bTwinCATModbusStart:=TRUE;
	GVL_MitsubishiCom.bTwinCATRun:=TRUE;
	
	IF GVL.eMachineState < E_MachineState.Stay THEN
		GVL_MitsubishiCom.bTwinCATAlarm:=FALSE;
	ELSE
		GVL_MitsubishiCom.bTwinCATAlarm:=TRUE;
	END_IF

//---三菱より入力---
	IF GVL_MitsubishiCom.bMitsubishiRun=FALSE THEN
		RETURN;
	ELSIF GVL_MitsubishiCom.bMitsubishiModbusStart=FALSE THEN
		RETURN;
	ELSIF GVL.mb_Output_Coils[8]=TRUE THEN
		GVL.stAlarm[E_AlarmList.MITSUBISHIAlarm].bFlag:=FALSE;
		GVL.stAlarm[E_AlarmList.MITSUBISHIAlarm].eMachineStateSet:=E_MachineState.Base;
	ELSIF GVL.mb_Output_Coils[9]=TRUE AND GVL.stAlarm[E_AlarmList.EmergencyStop].bFlag=FALSE THEN
		GVL.stAlarm[E_AlarmList.MITSUBISHIAlarm].bFlag:=FALSE;
		GVL.stAlarm[E_AlarmList.MITSUBISHIAlarm].eMachineStateSet:=E_MachineState.Base;
	ELSIF GVL_MitsubishiCom.bMitsubishiAlarm=FALSE THEN
		GVL.stAlarm[E_AlarmList.MITSUBISHIAlarm].bFlag:=TRUE;
		GVL.stAlarm[E_AlarmList.MITSUBISHIAlarm].eMachineStateSet:=E_MachineState.Warning;
	END_IF

//-----応答速度確認-----
	IF GVL.mb_Input_Coils[14]=TRUE AND GVL.mb_Output_Coils[14]=FALSE THEN;
		uliCountSpeed:=uliCountSpeed+1;
	END_IF

	GVL.mb_Input_Coils[15]:=GVL.mb_Output_Coils[15];//三菱へ応答


//-----三菱にBeckhoff通信中ブリンクで通知-----
	fbTonBlink1(IN:=NOT fbTonBlink2.Q,PT:=tBlinkTine,Q=>fbTonBlink2.IN,ET=>);

	GVL.mb_Input_Coils[0]:=fbTonBlink1.Q;

	fbTonBlink2(IN:=,PT:=tBlinkTine,Q=>,ET=>);


//-----三菱シーケンサ通信中確認-----
	fbTonRunCheck1(IN:=GVL.mb_Output_Coils[0],PT:=T#500MS,Q=>,ET=>);
	fbTonRunCheck2(IN:=NOT GVL.mb_Output_Coils[0],PT:=T#500MS,Q=>,ET=>);
	
	bMitsubishiModbusOK:=fbTonRunCheck1.Q OR fbTonRunCheck2.Q;


//-----McPoerのOnとOff------
	fbMcPowerREdge(CLK:=GVL.mb_Output_Coils[4],Q=>);
	fbMcPowerFEdge(CLK:=GVL.mb_Input_Coils[4],Q=>);
	fbTonMcPower(IN:=GVL.mb_Output_Coils[4],PT:=T#3S,Q=>,ET=>);

	IF GVL.bPower=FALSE AND fbMcPowerREdge.Q=TRUE THEN;
		GVL.bPower:=TRUE;
	ELSIF GVL.bPower=TRUE AND fbTonMcPower.Q=TRUE THEN ;
		GVL.bPower:=FALSE;
	ELSIF fbMcPowerFEdge.Q=TRUE THEN;
		GVL.bPower:=FALSE;
	END_IF;
	
	IF GVL.bMcPowerStatus[E_Axis.X_Axis]=TRUE AND GVL.bMcPowerStatus[E_Axis.Y_Axis]=TRUE AND GVL.bMcPowerStatus[E_Axis.Z_Axis]=TRUE AND GVL.bMcPowerStatus[E_Axis.Gripper]=TRUE THEN;
		GVL.mb_Input_Coils[4]:=TRUE;
	ELSE;
		GVL.mb_Input_Coils[4]:=FALSE;
	END_IF;


//-----ゼロポジション実行-----
	IF GVL.mb_Input_Coils[4]=TRUE THEN;
		GVL.bHome:=GVL.mb_Output_Coils[5];
	END_IF

	IF GVL.stMoveHomingOut[E_Axis.X_Axis].Busy=TRUE OR GVL.stMoveHomingOut[E_Axis.Y_Axis].Busy=TRUE OR GVL.stMoveHomingOut[E_Axis.Z_Axis].Busy=TRUE OR GVL.stMoveHomingOut[E_Axis.Gripper].Busy=TRUE THEN;
		GVL.mb_Input_Coils[5]:=TRUE;
	ELSE;
		GVL.mb_Input_Coils[5]:=FALSE;
	END_IF;


//-----Jog実行-----
	IF GVL.mb_Input_Coils[4]=TRUE THEN;
		//X軸
		GVL.bJog[E_Axis.X_Axis]:=GVL.mb_Output_Coils[16];
		GVL.lrJogPosition[E_Axis.X_Axis]:=GVL.mb_Output_Registers[16];
		
		//Y軸
		GVL.bJog[E_Axis.Y_Axis]:=GVL.mb_Output_Coils[17];
		GVL.lrJogPosition[E_Axis.Y_Axis]:=GVL.mb_Output_Registers[17];
		
		//Z軸 ステージにグリッパーがあたるのでZ軸は300無しで
		GVL.bJog[E_Axis.Z_Axis]:=GVL.mb_Output_Coils[18];
		GVL.lrJogPosition[E_Axis.Z_Axis]:=GVL.mb_Output_Registers[18];
		IF GVL.lrJogPosition[E_Axis.Z_Axis]>230 THEN;
			GVL.lrJogPosition[E_Axis.Z_Axis]:=225;
		END_IF

		//グリッパー
		GVL.bJog[E_Axis.Gripper]:=GVL.mb_Output_Coils[19];
		GVL.lrJogPosition[E_Axis.Gripper]:=WORD_TO_INT(GVL.mb_Output_Registers[19]);
	END_IF


//-----停止ボタン----
	IF GVL.mb_Input_Coils[4]=TRUE THEN;
		GVL.bHalt:=GVL.mb_Output_Coils[6];
	END_IF

	

//-----非常停止ボタン-----
	IF GVL.mb_Input_Coils[4]=TRUE THEN;
		GVL.bStop:=NOT GVL.mb_Output_Coils[1];
	END_IF


//-----カメラシャッター応答-----
	GVL.mb_Input_Coils[7]:=GVL.mb_Output_Coils[7];

//-----アラームリセット応答-----
	GVL.mb_Input_Coils[8]:=GVL.mb_Output_Coils[8];

//-----セーフティー非常停止リセット応答-----
	GVL.mb_Input_Coils[9]:=GVL.mb_Output_Coils[9];
]]></ST>
    </Implementation>
    <LineIds Name="P_MitsubishiCom">
      <LineId Id="779" Count="1" />
      <LineId Id="1002" Count="0" />
      <LineId Id="1161" Count="0" />
      <LineId Id="1168" Count="0" />
      <LineId Id="1163" Count="0" />
      <LineId Id="1169" Count="1" />
      <LineId Id="1164" Count="0" />
      <LineId Id="1029" Count="0" />
      <LineId Id="781" Count="0" />
      <LineId Id="1125" Count="0" />
      <LineId Id="1127" Count="1" />
      <LineId Id="1130" Count="0" />
      <LineId Id="1207" Count="1" />
      <LineId Id="1206" Count="0" />
      <LineId Id="1240" Count="1" />
      <LineId Id="1239" Count="0" />
      <LineId Id="1166" Count="1" />
      <LineId Id="1201" Count="0" />
      <LineId Id="1131" Count="0" />
      <LineId Id="782" Count="25" />
      <LineId Id="1064" Count="0" />
      <LineId Id="808" Count="5" />
      <LineId Id="1062" Count="0" />
      <LineId Id="814" Count="0" />
      <LineId Id="1063" Count="0" />
      <LineId Id="815" Count="21" />
      <LineId Id="838" Count="0" />
      <LineId Id="907" Count="0" />
      <LineId Id="842" Count="2" />
      <LineId Id="908" Count="0" />
      <LineId Id="848" Count="2" />
      <LineId Id="909" Count="0" />
      <LineId Id="854" Count="0" />
      <LineId Id="910" Count="2" />
      <LineId Id="856" Count="1" />
      <LineId Id="913" Count="0" />
      <LineId Id="863" Count="0" />
      <LineId Id="865" Count="0" />
      <LineId Id="906" Count="0" />
      <LineId Id="867" Count="15" />
      <LineId Id="1094" Count="0" />
      <LineId Id="1093" Count="0" />
      <LineId Id="883" Count="0" />
      <LineId Id="1096" Count="0" />
      <LineId Id="1095" Count="0" />
      <LineId Id="884" Count="0" />
      <LineId Id="940" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>